ClipIt-v1.3.0-14112010001 - 14 Nov. 2010
	+ Added: Added "Edit" and "Remove" buttons to the "Manage History" dialog.
	+ Fixed: Major speed improvements for big history entries while:
			searching through the history;
			populating the "Manage History" dialog;
			generating the popup menus;
		All of these should now be more than 99% faster, at the expense
		of an (at most) 1MB overhead. I think it's worth it, though.
	+ Fixed: Fixed a drawing issue with the small history menu when activated
			by clicking on the systray icon.

ClipIt-v1.2.6-12112010003 - 12 Nov. 2010
	+ Fixed: Removed reference to pthread.h from configure.in.
	+ Fixed: Set AM_MAINTAINER_MODE to disabled by default.

ClipIt-v1.2.5-12112010002 - 12 Nov. 2010
	+ Fixed: Now using autopoint instead of gettextize to avoid waiting for
			user input.
	+ Fixed: Added AM_MAINTAINER_MODE, to get rid of the disable-maintainer-mode
			warning.
	+ Fixed: Fixed a small typo in main.c.
	+ Fixed: removed dependency of pthread.h (the pthread_exit function that we
			use is also included in glib.h).

ClipIt-v1.2.4-12112010001 - 12 Nov. 2010
	+ Fixed: Fixed 2 small omitions from previous changes.

ClipIt-v1.2.3-11112010002 - 11 Nov. 2010
	+ Fixed: Fixed the manpage so it now aligns to the conventions for 
			writing Linux man pages.
	+ Fixed: Added the "-Wl,--as-needed" flag, so only the needed packages
			are included.

ClipIt-v1.2.2-11112010001 - 11 Nov. 2010
	+ Fixed: Some small compatibility changes for debian packaging.

ClipIt-v1.2.1-10112010002 - 10 Nov. 2010
	+ Fixed: Fixed OOM bug when copying large chunks of text by limiting
			the history entry to 512KB.
			(http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=602205)

ClipIt-v1.2.0-10112010001 - 10 Nov. 2010
	+ Added: Option to save URIs (they were actually saved by default before, but
				now you have the option to disable this behaviour).
	+ Fixed: Copying files and folders now works again.
	+ Fixed: Changed some of the default configuration values.
